fixed overflowing html

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -3,6 +3,7 @@ body, html {
   margin: 0;
   height: 100%;
   font-family: Roboto, Ubuntu, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  overflow: hidden;
 }
 
 #root {
